--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -19,7 +19,10 @@ permissions:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: ${{matrix.os}}#ubuntu-latest #Runs on Ubunti, windows or mac OS
+    strategy:
+      matrix:
+        os: [ubuntu-latest,windows-latest,macOs-latest]
 
     steps:
     - uses: actions/checkout@v3
