updated action work flow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,3 +39,14 @@ jobs:
       uses: gradle/gradle-build-action@bd5760595778326ba7f1441bcf7e88b49de61a25 # v2.6.0
       with:
         arguments: build
+
+    - name: Build and push docker image # docker login cred     docker build     docker tag # https://github.com/marketplace/actions/docker-build-push-action
+      uses: mr-smithers-excellent/docker-build-push@v6 #action with v6
+      with:
+        image: kalkumar23/githubactions1 #Parameters to overwrite Docker ID and repo name
+        registry: docker.io
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+        
+
+
