--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ permissions:
 jobs:
   build:
 
-    runs-on: ${{matrix.os}} #ubuntu-latest,windows-latest,macOs-latest #Runs on Ubunti, windows or mac OS
+    runs-on: ${{matrix.os}} #ubuntu-latest (Docker preinstalled),windows-latest,macOs-latest #Runs on Ubunti, windows or mac OS
     strategy:
       matrix:
         os: [ubuntu-latest]
@@ -45,7 +45,7 @@ jobs:
       with:
         image: kalkumar23/githubactions1 #Parameters to overwrite Docker ID and repo name
         registry: docker.io
-        username: ${{ secrets.DOCKER_USERNAME }}
+        #username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
         
 
