--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,8 +44,9 @@ jobs:
       uses: mr-smithers-excellent/docker-build-push@v6 #action with v6
       with:
         image: kalkumar23/githubactions1 #Parameters to overwrite Docker ID and repo name
+        tags: v1, latest
         registry: docker.io
-        #username: ${{ secrets.DOCKER_USERNAME }}
+        username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
         
 
