--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,14 +40,22 @@ jobs:
       with:
         arguments: build
 
-    - name: Build and push docker image # docker login cred     docker build     docker tag # https://github.com/marketplace/actions/docker-build-push-action
-      uses: mr-smithers-excellent/docker-build-push@v6 #action with v6
+    - name: Publish to DOcker
+      uses: docker/build-push-action@v1
       with:
-        image: kalkumar23/githubactions1 #Parameters to overwrite Docker ID and repo name
-        tags: v1, latest
-        registry: docker.io
         username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+        password: ${{ secrets.DOCKER_PASSWORD }}        
+        repository: kalkumar23/githubactions1 
+        tags: v1, latest
+    # - name: Build and push docker image to Docker Hub # docker login cred     docker build     docker tag # https://github.com/marketplace/actions/docker-build-push-action
+    #   uses: mr-smithers-excellent/docker-build-push@v6 #action with v6
+    #   with:
+    #     image: kalkumar23/githubactions1 #Parameters to overwrite Docker ID and repo name
+    #     tags: v1, latest
+    #     dockerfile: ./
+    #     registry: docker.io
+    #     username: ${{ secrets.DOCKER_USERNAME }}
+    #     password: ${{ secrets.DOCKER_PASSWORD }}
         
 
 
