--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@
 
 name: Java CI with Gradle
 
-on:
+on: #Event is triggered ( series of commands when a  code is pushed or PR is created) testing
   push:
     branches: [ "main" ]
   pull_request:
@@ -16,7 +16,7 @@ on:
 permissions:
   contents: read
 
-jobs:
+jobs: #Jobs
   build:
 
     runs-on: ${{matrix.os}} #ubuntu-latest (Docker preinstalled),windows-latest,macOs-latest #Runs on Ubunti, windows or mac OS
@@ -24,18 +24,18 @@ jobs:
       matrix:
         os: [ubuntu-latest]
 
-    steps:
-    - uses: actions/checkout@v3
+    steps: # Steps followed by actions
+    - uses: actions/checkout@v3 # Checks out the code
     - name: Set up JDK 11
-      uses: actions/setup-java@v3
+      uses: actions/setup-java@v3 # Installs dependencies - Java
       with:
         java-version: '11'
         distribution: 'temurin'
         
-    - name: Run chmod to make gradlew executable
+    - name: Run chmod to make gradlew executable # Runs the commands
       run: chmod +x ./gradlew
       
-    - name: Build with Gradle
+    - name: Build with Gradle # Builds the code
       uses: gradle/gradle-build-action@bd5760595778326ba7f1441bcf7e88b49de61a25 # v2.6.0
       with:
         arguments: build
