--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs: #Jobs
         os: [ubuntu-latest]
 
     steps: # Steps followed by actions
-    - uses: actions/checkout@v3 # Checks out the code
+    - uses: actions/checkout@v3 # Here's an example of an action that performs a git checkout of a repository.
     - name: Set up JDK 11
       uses: actions/setup-java@v3 # Installs dependencies - Java
       with:
