--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,10 +19,10 @@ permissions:
 jobs: #Jobs
   build:
 
-    runs-on: ${{matrix.os}} #ubuntu-latest (Docker preinstalled),windows-latest,macOs-latest #Runs on Ubunti, windows or mac OS
+    runs-on: ${{matrix.os}} #ubuntu-latest (Docker preinstalled),windows-latest,macOs-latest #Runs on ubuntu, windows or mac OS
     strategy:
       matrix:
-        os: [ubuntu-latest]
+        os: [ubuntu-latest,windows-latest,macOs-latest ]
 
     steps: # Steps followed by actions
     - uses: actions/checkout@v3 # Here's an example of an action that performs a git checkout of a repository.
